# triathlon

./: Athlete.qml  AthletesScreen.qml  BankScreen.qml  CMakeLists.txt  Game.qml  HubPage.qml  HubScreen.qml  HubTabBar.qml  LoadingScreen.qml  Main.qml  README.md  RaceScreen.qml  RaceTabBar.qml  TrackScreen.qml  main.cpp
.cursor/rules/: qt-linguist-ts.mdc  qt-qml.mdc  shell-windows.mdc
